[package]
name = "monkeywrench"
version = "0.1.0"
authors = ['Ryooooooga <eial5q265e5@gmail.com>']
description = 'Personal monkeywrench'
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/Ryooooooga/monkeywrench'
keywords = ['shell', 'shell-plugin']
edition = '2021'

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
derive_more = { version = "1.0", features = ["display"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
