[package]
name = "monkeywrench"
version = "0.1.0"
authors = ["Ryooooooga <eial5q265e5@gmail.com>"]
description = "Personal monkeywrench"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ryooooooga/monkeywrench"
keywords = ["shell", "shell-plugin"]
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
derive_more = { version = "2.1", features = ["display"] }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
